deploy/k8s/workloads/dashboard-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-api
  name: dashboard-api-service
spec:
  ports:
    - name: http-port
      port: 8005
      targetPort: 8005
      protocol: TCP
  selector:
    app: dashboard-api
  #type: NodePort
